[gd_scene load_steps=43 format=3 uid="uid://dybqsipj6abjl"]

[ext_resource type="Script" uid="uid://dej0o8snmo2n8" path="res://script/main_menu.gd" id="1_8ln24"]
[ext_resource type="Material" uid="uid://llijeg5j4yf3" path="res://assets/materials/checker2.tres" id="1_l6cm7"]
[ext_resource type="Texture2D" uid="uid://c78q7jrmwx1h7" path="res://assets/images/border.png" id="2_ekxnf"]
[ext_resource type="Texture2D" uid="uid://4fnbdp8g8e3q" path="res://assets/images/viper.png" id="3_wu84c"]
[ext_resource type="FontFile" uid="uid://b8y8r00o4leu1" path="res://assets/fonts/Starborn.ttf" id="4_8ln24"]
[ext_resource type="Texture2D" uid="uid://lq6x7s45fxb" path="res://assets/images/crazy.png" id="6_1ajci"]
[ext_resource type="Texture2D" uid="uid://cbamu22edd6hf" path="res://assets/images/arrow.svg" id="6_jk1qb"]
[ext_resource type="Texture2D" uid="uid://iemged2ns72i" path="res://assets/images/options_button.svg" id="6_rtw2f"]
[ext_resource type="Texture2D" uid="uid://bpipg1q6jlu0g" path="res://assets/images/solo_button.svg" id="7_lgwnu"]
[ext_resource type="Texture2D" uid="uid://b7tuo2kqvwnw" path="res://assets/images/delve_button.svg" id="7_tbmy8"]
[ext_resource type="Texture2D" uid="uid://dbjd8tojakw2f" path="res://assets/images/multi_button.svg" id="8_flqon"]
[ext_resource type="Texture2D" uid="uid://0nboqjhk0unl" path="res://assets/images/quit_button.svg" id="8_jk1qb"]
[ext_resource type="Texture2D" uid="uid://cy0kdpn2nutkw" path="res://assets/images/host_button.svg" id="9_rcqid"]
[ext_resource type="Texture2D" uid="uid://h50tb5tk3g86" path="res://assets/images/join_button.svg" id="10_1ajci"]
[ext_resource type="Texture2D" uid="uid://bgk1qf3drxwvk" path="res://assets/images/scan_button.svg" id="11_7b55j"]

[sub_resource type="ProceduralSkyMaterial" id="ProceduralSkyMaterial_ekxnf"]
sky_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)
ground_horizon_color = Color(0.662243, 0.671743, 0.686743, 1)

[sub_resource type="Sky" id="Sky_bqqt6"]
sky_material = SubResource("ProceduralSkyMaterial_ekxnf")

[sub_resource type="Environment" id="Environment_wu84c"]
background_mode = 2
sky = SubResource("Sky_bqqt6")
tonemap_mode = 2
glow_enabled = true

[sub_resource type="PlaneMesh" id="PlaneMesh_ekxnf"]
material = ExtResource("1_l6cm7")
size = Vector2(8, 8)

[sub_resource type="ViewportTexture" id="ViewportTexture_bqqt6"]
viewport_path = NodePath("SubViewport")

[sub_resource type="Animation" id="Animation_oa1go"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RichTextLabel2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../black:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../white:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../RichTextLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../menu1/options:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/6/type = "value"
tracks/6/imported = false
tracks/6/enabled = true
tracks/6/path = NodePath("../menu1:visible")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_8ln24"]
resource_name = "flash"
length = 0.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../white:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.2, 0.4),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../black:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_tbmy8"]
resource_name = "show_buttons"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("../white:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RichTextLabel:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../menu1/options:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../menu1:visible")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_rtw2f"]
resource_name = "start"
length = 5.4
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25, 1.33333, 1.96667),
"transitions": PackedFloat32Array(1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("../RichTextLabel2:modulate")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 2.01, 2.24, 3.3, 4.03),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1),
"update": 0,
"values": [Color(1, 1, 1, 0), Color(1, 1, 1, 0), Color(1, 1, 1, 1), Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("../black:visible")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 4.58, 4.66667),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [true, true, false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("../white:modulate")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(4.61, 5.2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(1, 1, 1, 1), Color(1, 1, 1, 0)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("../RichTextLabel:visible")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(5.4),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/5/type = "value"
tracks/5/imported = false
tracks/5/enabled = true
tracks/5/path = NodePath("../menu1:visible")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_1ajci"]
resource_name = "delve-1"

[sub_resource type="AnimationLibrary" id="AnimationLibrary_tbmy8"]
_data = {
&"RESET": SubResource("Animation_oa1go"),
&"delve-1": SubResource("Animation_1ajci"),
&"flash": SubResource("Animation_8ln24"),
&"show_buttons": SubResource("Animation_tbmy8"),
&"start": SubResource("Animation_rtw2f")
}

[sub_resource type="Animation" id="Animation_jk1qb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(454, 126)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(248, 304)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("multi2:size")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(40, 40)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("multi2:scale")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, 1)]
}
tracks/4/type = "value"
tracks/4/imported = false
tracks/4/enabled = true
tracks/4/path = NodePath("multi2:position")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(0, 0)]
}

[sub_resource type="Animation" id="Animation_5dd4i"]
resource_name = "show_multi"
length = 1.25
capture_included = true
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:size")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(454, 126)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("TextureRect:position")
tracks/1/interp = 2
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.5, 0.75),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 2,
"values": [Vector2(248, 304), Vector2(675, 304), Vector2(508, 304)]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("multi2:scale")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.266667, 1.25),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(1e-05, 1e-05), Vector2(1e-05, 1e-05), Vector2(1, 1)]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("multi2:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0, 0.5, 0.78),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 0,
"values": [Vector2(248, 304), Vector2(923, 373), Vector2(703, 368)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_lgwnu"]
_data = {
&"RESET": SubResource("Animation_jk1qb"),
&"show_multi": SubResource("Animation_5dd4i")
}

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_j7ex8"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_a8gd2"]
bg_color = Color(0, 0, 0, 1)

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_hstxw"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="Image" id="Image_1ajci"]
data = {
"data": PackedByteArray(0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 175, 175, 175, 19, 175, 175, 175, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 175, 175, 175, 19, 180, 180, 180, 64, 180, 180, 180, 64, 175, 175, 175, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 175, 175, 175, 19, 180, 180, 180, 64, 180, 180, 180, 64, 175, 175, 175, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 175, 175, 175, 19, 175, 175, 175, 19, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0),
"format": "RGBA8",
"height": 8,
"mipmaps": false,
"width": 8
}

[sub_resource type="ImageTexture" id="ImageTexture_7b55j"]
image = SubResource("Image_1ajci")

[sub_resource type="Image" id="Image_5pajh"]
data = {
"data": PackedByteArray(179, 179, 179, 47, 179, 179, 179, 50, 170, 170, 170, 6, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 64, 180, 180, 180, 64, 177, 177, 177, 49, 180, 180, 180, 64, 175, 175, 175, 54, 170, 170, 170, 6, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 64, 180, 180, 180, 64, 153, 153, 153, 5, 177, 177, 177, 52, 180, 180, 180, 64, 175, 175, 175, 54, 170, 170, 170, 6, 0, 0, 0, 0, 180, 180, 180, 64, 180, 180, 180, 64, 0, 0, 0, 0, 153, 153, 153, 5, 177, 177, 177, 52, 180, 180, 180, 64, 179, 179, 179, 50, 0, 0, 0, 0, 180, 180, 180, 64, 180, 180, 180, 64, 0, 0, 0, 0, 170, 170, 170, 6, 178, 178, 178, 53, 180, 180, 180, 64, 177, 177, 177, 49, 0, 0, 0, 0, 180, 180, 180, 64, 180, 180, 180, 64, 170, 170, 170, 6, 178, 178, 178, 53, 180, 180, 180, 64, 178, 178, 178, 53, 204, 204, 204, 5, 0, 0, 0, 0, 180, 180, 180, 64, 180, 180, 180, 64, 181, 181, 181, 48, 180, 180, 180, 64, 178, 178, 178, 53, 204, 204, 204, 5, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 64, 180, 180, 180, 64, 181, 181, 181, 41, 181, 181, 181, 48, 204, 204, 204, 5, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 0, 180, 180, 180, 64, 180, 180, 180, 64),
"format": "RGBA8",
"height": 8,
"mipmaps": false,
"width": 8
}

[sub_resource type="ImageTexture" id="ImageTexture_j7ex8"]
image = SubResource("Image_5pajh")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_8egab"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(1, 1, 1, 0.75)
draw_center = false
border_width_left = 2
border_width_top = 2
border_width_right = 2
border_width_bottom = 2
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5
expand_margin_left = 2.0
expand_margin_top = 2.0
expand_margin_right = 2.0
expand_margin_bottom = 2.0

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_gw5y6"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_svtp6"]
content_margin_left = 4.0
content_margin_top = 4.0
content_margin_right = 4.0
content_margin_bottom = 4.0
bg_color = Color(0.1, 0.1, 0.1, 0.3)
border_width_bottom = 2
border_color = Color(0, 0, 0, 0.3)
corner_radius_top_left = 3
corner_radius_top_right = 3
corner_radius_bottom_right = 3
corner_radius_bottom_left = 3
corner_detail = 5

[sub_resource type="Theme" id="Theme_8egab"]
RichTextLabel/colors/default_color = Color(0.851769, 0.851769, 0.851769, 1)
RichTextLabel/colors/font_outline_color = Color(1, 1, 1, 1)
RichTextLabel/constants/outline_size = 6
RichTextLabel/font_sizes/normal_font_size = 32
RichTextLabel/fonts/normal_font = ExtResource("4_8ln24")
RichTextLabel/styles/background = SubResource("StyleBoxFlat_j7ex8")
RichTextLabel/styles/fill = SubResource("StyleBoxFlat_a8gd2")
RichTextLabel/styles/normal = SubResource("StyleBoxFlat_hstxw")
TextEdit/colors/caret_background_color = Color(0, 0, 0, 1)
TextEdit/colors/current_line_color = Color(0.25, 0.25, 0.26, 0.8)
TextEdit/colors/font_color = Color(1, 1, 1, 1)
TextEdit/colors/font_outline_color = Color(0, 0, 0, 1)
TextEdit/colors/font_placeholder_color = Color(1, 1, 1, 0.6)
TextEdit/colors/font_readonly_color = Color(0.875, 0.875, 0.875, 0.5)
TextEdit/colors/font_selected_color = Color(0, 0, 0, 0)
TextEdit/colors/search_result_border_color = Color(0.3, 0.3, 0.3, 0.4)
TextEdit/colors/search_result_color = Color(0.3, 0.3, 0.3, 1)
TextEdit/colors/selection_color = Color(0.5, 0.5, 0.5, 1)
TextEdit/colors/word_highlighted_color = Color(0.5, 0.5, 0.5, 0.25)
TextEdit/constants/caret_width = 1
TextEdit/constants/line_spacing = 4
TextEdit/constants/outline_size = 0
TextEdit/font_sizes/font_size = 32
TextEdit/fonts/font = ExtResource("4_8ln24")
TextEdit/icons/space = SubResource("ImageTexture_7b55j")
TextEdit/icons/tab = SubResource("ImageTexture_j7ex8")
TextEdit/styles/focus = SubResource("StyleBoxFlat_8egab")
TextEdit/styles/normal = SubResource("StyleBoxFlat_gw5y6")
TextEdit/styles/read_only = SubResource("StyleBoxFlat_svtp6")

[sub_resource type="StyleBoxFlat" id="StyleBoxFlat_7b55j"]
bg_color = Color(0, 0, 0, 1)
border_width_left = 4
border_width_top = 4
border_width_right = 4
border_width_bottom = 4

[sub_resource type="Theme" id="Theme_5pajh"]
ItemList/colors/font_color = Color(1, 1, 1, 1)
ItemList/fonts/font = ExtResource("4_8ln24")
ItemList/styles/panel = SubResource("StyleBoxFlat_7b55j")

[node name="Main Menu" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_8ln24")

[node name="DirectionalLight3D" type="DirectionalLight3D" parent="."]
transform = Transform3D(-0.866023, -0.433016, 0.250001, 0, 0.499998, 0.866027, -0.500003, 0.749999, -0.43301, 0, 0, 0)
shadow_enabled = true

[node name="WorldEnvironment" type="WorldEnvironment" parent="."]
environment = SubResource("Environment_wu84c")

[node name="SubViewport" type="SubViewport" parent="."]
size = Vector2i(1920, 1080)

[node name="Camera3D" type="Camera3D" parent="SubViewport"]
transform = Transform3D(-4.37114e-08, 0, 1, 0, 1, 0, -1, 0, -4.37114e-08, 4.40587, 0, 0)
fov = 49.107

[node name="MeshInstance3D" type="MeshInstance3D" parent="SubViewport"]
transform = Transform3D(-4.37114e-08, 1, 0, 4.37114e-08, 1.91069e-15, 1, 1, 4.37114e-08, -4.37114e-08, 0, 0, 0)
mesh = SubResource("PlaneMesh_ekxnf")
skeleton = NodePath("../..")

[node name="TextureRect" type="TextureRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1080.0
texture = SubResource("ViewportTexture_bqqt6")

[node name="Camera2D" type="Camera2D" parent="."]
position = Vector2(960, 543)
zoom = Vector2(0.6, 0.6)

[node name="top_border" type="Control" parent="."]
anchors_preset = 0
offset_left = -42.0
offset_top = -68.0
offset_right = -2.0
offset_bottom = -28.0
scale = Vector2(1.661, 1.661)

[node name="TextureRect2" type="TextureRect" parent="top_border"]
layout_mode = 0
offset_top = -123.0
offset_right = 603.0
offset_bottom = 877.0
texture = ExtResource("2_ekxnf")
expand_mode = 4
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="top_border"]
layout_mode = 0
offset_left = 602.0
offset_top = -123.0
offset_right = 1205.0
offset_bottom = 877.0
texture = ExtResource("2_ekxnf")
expand_mode = 4
stretch_mode = 4

[node name="bottom_border" type="Control" parent="."]
anchors_preset = 0
offset_left = 1924.0
offset_top = 1109.0
offset_right = 1964.0
offset_bottom = 1149.0
rotation = 3.14159
scale = Vector2(1.661, 1.661)

[node name="TextureRect2" type="TextureRect" parent="bottom_border"]
layout_mode = 0
offset_top = -123.0
offset_right = 603.0
offset_bottom = 877.0
texture = ExtResource("2_ekxnf")
expand_mode = 4
stretch_mode = 4

[node name="TextureRect3" type="TextureRect" parent="bottom_border"]
layout_mode = 0
offset_left = 602.0
offset_top = -123.0
offset_right = 1205.0
offset_bottom = 877.0
texture = ExtResource("2_ekxnf")
expand_mode = 4
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="."]
clip_contents = false
layout_mode = 0
offset_left = 641.0
offset_top = 1025.0
offset_right = 1617.0
offset_bottom = 1419.0
theme_override_fonts/normal_font = ExtResource("4_8ln24")
theme_override_font_sizes/normal_font_size = 32
text = "Press anything to Continue!"

[node name="white" type="ColorRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1115.0

[node name="black" type="ColorRect" parent="."]
layout_mode = 0
offset_right = 1920.0
offset_bottom = 1115.0
color = Color(0, 0, 0, 1)

[node name="anim" type="AnimationPlayer" parent="."]
root_node = NodePath("../TextureRect2")
libraries = {
&"": SubResource("AnimationLibrary_tbmy8")
}
speed_scale = 0.5

[node name="TextureRect2" type="TextureRect" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 658.0
offset_top = 206.0
offset_right = 1268.0
offset_bottom = 1230.0
texture = ExtResource("3_wu84c")
expand_mode = 4
stretch_mode = 4

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect2"]
layout_mode = 0
offset_left = 174.0
offset_top = 39.0
offset_right = 405.0
offset_bottom = 83.0
theme_override_fonts/normal_font = ExtResource("4_8ln24")
theme_override_font_sizes/normal_font_size = 32
text = "A game by"

[node name="RichTextLabel2" type="RichTextLabel" parent="TextureRect2"]
layout_mode = 0
offset_left = 43.0
offset_top = 538.0
offset_right = 566.0
offset_bottom = 582.0
theme_override_fonts/normal_font = ExtResource("4_8ln24")
theme_override_font_sizes/normal_font_size = 32
text = "Computer Science Club"

[node name="RichTextLabel2" type="RichTextLabel" parent="."]
modulate = Color(1, 1, 1, 0)
layout_mode = 0
offset_left = 828.0
offset_top = 331.0
offset_right = 1434.0
offset_bottom = 616.0
theme_override_fonts/normal_font = ExtResource("4_8ln24")
theme_override_font_sizes/normal_font_size = 32
text = "Special Thanks to

Mr. Cheung
Mr. Cheverie

We wouldn't be here without you!"

[node name="menu2" type="Control" parent="."]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="AnimationPlayer" type="AnimationPlayer" parent="menu2"]
libraries = {
&"": SubResource("AnimationLibrary_lgwnu")
}

[node name="TextureRect" type="TextureRect" parent="menu2"]
layout_mode = 0
offset_left = 248.0
offset_top = 304.0
offset_right = 702.0
offset_bottom = 430.0
texture = ExtResource("6_jk1qb")
expand_mode = 2
stretch_mode = 4

[node name="multi2" type="Control" parent="menu2"]
anchors_preset = 0
offset_right = 40.0
offset_bottom = 40.0

[node name="solo" type="TextureButton" parent="menu2/multi2"]
layout_mode = 0
offset_left = 73.0
offset_top = -117.0
offset_right = 561.0
offset_bottom = 165.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("7_lgwnu")
ignore_texture_size = true
stretch_mode = 4

[node name="multi" type="TextureButton" parent="menu2/multi2"]
layout_mode = 0
offset_left = 436.0
offset_top = -117.0
offset_right = 924.0
offset_bottom = 165.0
scale = Vector2(0.75, 0.75)
texture_normal = ExtResource("8_flqon")
ignore_texture_size = true
stretch_mode = 4

[node name="VBoxContainer" type="VBoxContainer" parent="menu2/multi2/multi"]
layout_mode = 0
offset_left = -166.667
offset_top = 262.667
offset_right = 645.333
offset_bottom = 614.667
theme_override_constants/separation = -116

[node name="HBoxContainer" type="HBoxContainer" parent="menu2/multi2/multi/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="host" type="TextureButton" parent="menu2/multi2/multi/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(404, 352)
layout_mode = 2
texture_normal = ExtResource("9_rcqid")
ignore_texture_size = true
stretch_mode = 4

[node name="join" type="TextureButton" parent="menu2/multi2/multi/VBoxContainer/HBoxContainer"]
custom_minimum_size = Vector2(404, 352)
layout_mode = 2
texture_normal = ExtResource("10_1ajci")
ignore_texture_size = true
stretch_mode = 4

[node name="HBoxContainer2" type="HBoxContainer" parent="menu2/multi2/multi/VBoxContainer"]
custom_minimum_size = Vector2(128, 128)
layout_mode = 2

[node name="scan" type="TextureButton" parent="menu2/multi2/multi/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(404, 200)
layout_mode = 2
texture_normal = ExtResource("11_7b55j")
ignore_texture_size = true
stretch_mode = 4

[node name="TextEdit" type="TextEdit" parent="menu2/multi2/multi/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(400, 0)
layout_mode = 2
theme = SubResource("Theme_8egab")
placeholder_text = "IP Address"

[node name="RichTextLabel" type="RichTextLabel" parent="menu2/multi2"]
layout_mode = 0
offset_left = -94.0
offset_top = 134.0
offset_right = 257.0
offset_bottom = 197.0
theme = SubResource("Theme_8egab")
text = "Found Servers"
horizontal_alignment = 1
vertical_alignment = 1

[node name="server_list" type="ItemList" parent="menu2/multi2"]
layout_mode = 0
offset_left = -139.0
offset_top = 207.0
offset_right = 287.0
offset_bottom = 462.0
theme = SubResource("Theme_5pajh")
item_count = 1
fixed_icon_size = Vector2i(32, 32)
item_0/text = "192.168.1.1"
item_0/icon = ExtResource("6_1ajci")

[node name="menu1" type="Control" parent="."]
visible = false
anchors_preset = 0
offset_left = 75.0
offset_top = 137.0
offset_right = 115.0
offset_bottom = 177.0
scale = Vector2(0.75, 0.75)

[node name="delve" type="TextureButton" parent="menu1"]
layout_mode = 0
offset_left = 116.0
offset_top = 167.0
offset_right = 604.0
offset_bottom = 449.0
texture_normal = ExtResource("7_tbmy8")
ignore_texture_size = true
stretch_mode = 4

[node name="options" type="TextureButton" parent="menu1"]
layout_mode = 0
offset_left = 117.0
offset_top = 422.0
offset_right = 605.0
offset_bottom = 704.0
texture_normal = ExtResource("6_rtw2f")
ignore_texture_size = true
stretch_mode = 4

[node name="quit" type="TextureButton" parent="menu1"]
layout_mode = 0
offset_left = 117.0
offset_top = 672.0
offset_right = 605.0
offset_bottom = 954.0
texture_normal = ExtResource("8_jk1qb")
ignore_texture_size = true
stretch_mode = 4

[connection signal="pressed" from="menu2/multi2/solo" to="." method="_on_solo_pressed"]
[connection signal="pressed" from="menu2/multi2/multi" to="." method="_on_multi_pressed"]
[connection signal="pressed" from="menu2/multi2/multi/VBoxContainer/HBoxContainer/host" to="." method="_on_host_pressed"]
[connection signal="pressed" from="menu2/multi2/multi/VBoxContainer/HBoxContainer/join" to="." method="_on_join_pressed"]
[connection signal="pressed" from="menu2/multi2/multi/VBoxContainer/HBoxContainer2/scan" to="." method="_on_scan_pressed"]
[connection signal="item_selected" from="menu2/multi2/server_list" to="." method="_on_server_list_item_selected"]
